# SmartTrails

./: .gitignore  CMakeLists.txt  GENERATE_SLN.bat  vcpkg-configuration.json  vcpkg.json
